# csgames-past

2014/embed/: .gitignore  README.md
2014/embed/csgames_embed_avr32/: .cproject  .project  Makefile  README.md  avr32  config.mk  main.c  timer0.c  timer0.h  uartrx.c  uartrx.h
2014/embed/csgames_embed_qt/: .gitignore  csgames_embed_qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
2015/AI/: .gitignore  license.md  readme.md  start.sh  start_java.sh  start_python.sh  startup - AIClient.bat  startup - AIClient_Python.bat  startup - GUI.bat  startup.bat
2015/AI/AIClient/: AIClient.vcxproj  CMakeLists.txt
2015/AI/AIClient/include/: Character.h  GameMap.h  NetCommandController.h  NetUtility.h  NetworkController.h  Player.h
2015/AI/AIClient/src/: Character.cpp  GameMap.cpp  NetCommandController.cpp  NetworkController.cpp  Player.cpp  client.cpp
2015/AI/AIClient_JAVA/: .project  AIClient_Java_start.sh
2015/AI/AIClient_Python/: .project  .pydevproject  AIClient_Python_start.sh  AIClient_start_test.sh
2015/AI/GameClient/: CMakeLists.txt  GameClient.vcxproj
2015/AI/GameClient/Debug/: TestProject.exp  TestProject.lib
2015/AI/GameClient/TestProject/: Map.cpp  Map.h  TestProject.vcxproj  stdafx.h  unittest1.cpp
2015/AI/GameClient/include/: BaseApplication.h  Character.h  EventController.h  EventFactory.h  GameClientApplication.h  GameEvent.h  Map.h  Mine.h  Missile.h  NetUtility.h  NetworkController.h  QueueController.h  SdkCameraMan.h  Team.h  TextOverlay.h  World.h  stdafx.h
2015/AI/GameClient/src/: BaseApplication.cpp  Character.cpp  EventController.cpp  EventFactory.cpp  GameClientApplication.cpp  GameEvent.cpp  Map.cpp  Mine.cpp  Missile.cpp  NetworkController.cpp  QueueController.cpp  Team.cpp  TextOverlay.cpp  World.cpp  stdafx.cpp
2015/AI/GameClientNoGui/: CMakeLists.txt  GameClient.vcxproj
2015/AI/GameClientNoGui/include/: NetCharacter.h  NetCommandController.h  NetPlayer.h  NetPlayerController.h  NetUtility.h  NetworkController.h
2015/AI/GameClientNoGui/src/: NetCharacter.cpp  NetCommandController.cpp  NetPlayer.cpp  NetPlayerController.cpp  NetworkController.cpp  client.cpp
2015/AI/ServerRoot/: GameServer.js
2015/MachineLearning/: README.md
2016/Parallel/: test_gen.rb
2016/Parallel/PUBLIC/: test_safe.sh
2016/XP/: .gitignore  Makefile
Algorithmics/: README.md
Algorithmics/reference/: README.md
Compilation/: .gitignore  README.md  requirements.md
Compilation/correction/: Makefile  tests.sh
Compilation/enonce/: Makefile  tests.sh
Mission_Board/: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  apache2_add.conf  docker-compose.yml  requirements.txt  supervisord.conf
Mission_Board/data/: teams.csv  teams.json
Mission_Board/scripts/: backup.sh  cs_launch.sh  restore.sh  setup.sh
OS/: Makefile  README.md  tests.sh
OS/src/: filecoder.c  filecoder.h  filecoder_simple.c  filedecoder.c  filedecoder.h  filedecoder_simple.c  utils.c  utils.h
Parallel/correction/: Makefile  test_gen.nit  test_safe.sh
Reverse/: Makefile  README.md
Sport/src/: Main.py  Makefile  README.md  tilemap.pacman
Theorique/: .gitignore  Makefile  README.rst  info-theorique.tex  info-theorique_en.tex
XP/: Dockerfile  README.md  TODO.md  apache2_add.conf  dev.docker  dev.yml  docker-compose.yml  requirements.txt
XP/scripts/: setup.sh
(+1355 files in other folders)
